Fix h1 too narrow for title

--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ body {
 }
 h1 {
     text-align:right;
-    width:120px;
+    width:150px;
     height:50px;
     line-height:50px;
 }
